fix: improve alignments

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -25,7 +25,7 @@ body {
     max-width: 100%;
     margin: 0 24px;
     width: 1328px;
-    padding-top: 160px;
+    padding: 160px 0;
 }
 
 .text-block {
@@ -78,7 +78,7 @@ body {
 
         &:last-child {
             margin-left: auto;
-            transform: translateY(-455px);
+            margin-top: -455px;
         }
     }
 
@@ -92,6 +92,7 @@ body {
         display: flex;
         align-items: center;
         justify-content: space-between;
+        transform: translateY(-455px);
 
         img {
             width: 62px;
@@ -119,7 +120,9 @@ body {
     width: 600px;
     padding: 128px 112px 0px 56px;
     margin-left: auto;
-    transform: translateY(-455px);
+    margin-top: -455px;
+    margin-bottom: 160px;
+    position: relative;
 }
 
 .link--read-more {
@@ -197,6 +200,7 @@ body {
 
             &:last-child {
                 order: 1;
+                margin-top: 0;
             }
         }
 
@@ -225,7 +229,7 @@ body {
 
     .text-block--secondary,
     .product-gallery__item {
-        transform: translateY(0px) !important;
+        margin-top: 0 !important;
     }
 
     .text__paragraph {
